--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           </div>
         </div>
         <div class="col-12">
-          <div class="row pe-3 productsList">
+          <div class="row pe-3 ps-3 d-flex justify-content-center productsList">
             <!-- my cards -->
           </div>
         </div>
