--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12 bg-primary-subtle fs-4 fw-bolder p-3 header">
-          <span class="text-center">מוצרי פקיעין סלולר</span>
+          <span class="text-center">מוצרי החנות פקיעין סלולר</span>
         </div>
         <div class="col-12 mt-2">
           <div class="form-floating mb-3">
